tests/NormalTests/paczka1/fuzzy1/23071604.err
Error in line 13: snW5NnC S81 58,3
Error in line 27: rO9RwpJ S81 85,7
Error in line 33: Jj7 S81 73,5
